--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,9 @@
 <resources>
     <string name="app_name">Cardapio</string>
+    <string name="texto_macarraocarbonara">MACARRÃO CARBONARA</string>
+    <string name="texto_risotto">RISOTTO CREMOSO</string>
+    <string name="texto_rondelli">RONDELLI ITALIANO</string>
+    <string name="texto_coca">COCA COLA</string>
+    <string name="texto_fanta">FANTA</string>
+    <string name="texto_sprite">SPRITE</string>
 </resources>
